--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,13 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
-$secondary: #f88379;
-$black: #2f2f41;
-$white: #ffffff;
+$primary: #00b5f9;
+$primary-dark: #816697;
+$secondary: #816697;
+$black: #816697;
+$white: #f2f2f2;
 $white-offset: #fff6f8;
-$steel: #5c5a5a;
+$steel: #f2f2f2;
 
 // Links
 $link-color: $primary;
