--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 $primary: #00b5f9;
 $primary-dark: #816697;
 $secondary: #816697;
-$black: #816697;
+$black: #00b5f9;
 $white: #f2f2f2;
 $white-offset: #fff6f8;
 $steel: #f2f2f2;
