--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -5,10 +5,10 @@
   padding-top: 60px;
   padding-bottom: 60px;
   overflow: hidden;
-  @include media-breakpoint-up(md) {
-    padding-top: 140px;
-    padding-bottom: 140px;
-  }
+  // @include media-breakpoint-up(md) {
+  //   padding-top: 140px;
+  //   padding-bottom: 140px;
+  // }
   h1 {
     color: $black;
     font-size: 42px;
