--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $primary-dark: #816697;
 $secondary: #816697;
 $black: #00b5f9;
 $white: #f2f2f2;
-$white-offset: #fff6f8;
+$white-offset: #f2f2f2;
 $steel: #f2f2f2;
 
 // Links
