--- a/_sass/components/_fonts.scss
+++ b/_sass/components/_fonts.scss
@@ -1,7 +1,9 @@
+
 @font-face {
-	font-family: 'Playfair Display';
+	font-family: 'Comfortaa';
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 300;
 	font-display: swap;
-	src: local(''), url('../fonts/playfair-display.woff2') format('woff2');
+	src: local(''), url('../fonts/Comfortaa-VariableFont_wght') format('ttf');
+	src: url();
 }
