--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,11 +1,11 @@
 .header {
   color: $primary;
-  background-color: #f2f2f2;
+  background-color: $primary;
   display: flex;
   justify-content: space-between;
   align-items: center;
   // box-shadow: 0 1px 15px rgba(50, 50, 93, 0.2);
-  border-bottom: 1px solid $white-offset;
+  // border-bottom: 1px solid $primary;
   padding: 10px 0px;
   .container {
     display: flex;
