--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,12 @@
 
 // Colors
 $primary: #00b5f9;
-$primary-dark: #816697;
-$secondary: #816697;
-$black: #00b5f9;
-$white: #f2f2f2;
-$white-offset: #f2f2f2;
-$steel: #f2f2f2;
+$primary-dark: #0077b2;
+$secondary: #ffbf00;
+$black: #000000;
+$white: #fff;
+$white-offset: #f5f5f5;
+$steel: #808080;
 
 // Links
 $link-color: $primary;
@@ -17,8 +17,8 @@ $link-hover-color: lighten($primary, 10%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
-$font-family-heading: "Playfair Display", serif, -apple-system;
+$font-family-base: 'Comfortaa', sans-serif, -apple-system;
+$font-family-heading: 'Comfortaa', sans-serif, -apple-system;
 
 // Footer
 $footer-background-color: $primary;
