--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   display: block;
-  // margin-top: -370px;
+  margin-top: -370px;
 }
 .intro-image-absolute {
   max-width: none;
