--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,16 +13,23 @@
   <!-- Self host font -->
   <!-- <link rel="preload" href="{{ '/assets/fonts/playfair-display.woff2' | relative_url }}" as="font" type="font/woff2" crossorigin> -->
   <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
-  
-  {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
-  {% if page.meta_title %}<meta property="og:title" content="{{ page.meta_title }}"/>{% else %}<meta property="og:title" content="{{ page.title }}"/>{% endif %}
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="{{ url }}"/>
-  {% if page.image %}<meta property="og:image" content="{{ page.image | absolute_url }}"/>{% endif %}
-  {% if page.description %}<meta property="og:description" content="{{ page.description }}"/>{% endif %}
-  <meta name="twitter:card" content="summary"/>
-  {% if site.data.seo.meta_twitter_site %}<meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}"/>{% endif %}
-  {% if site.data.seo.meta_twitter_creator %}<meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}"/>{% endif %}
+
+  {% if page.description %}
+  <meta name="description" content="{{ page.description }}" />{% endif %}
+  {% if page.meta_title %}
+  <meta property="og:title" content="{{ page.meta_title }}" />{% else %}
+  <meta property="og:title" content="{{ page.title }}" />{% endif %}
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="{{ url }}" />
+  {% if page.image %}
+  <meta property="og:image" content="{{ page.image | absolute_url }}" />{% endif %}
+  {% if page.description %}
+  <meta property="og:description" content="{{ page.description }}" />{% endif %}
+  <meta name="twitter:card" content="summary" />
+  {% if site.data.seo.meta_twitter_site %}
+  <meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}" />{% endif %}
+  {% if site.data.seo.meta_twitter_creator %}
+  <meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}" />{% endif %}
 
 </head>
 
@@ -36,5 +43,16 @@
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
   {% include google-analytics.html %}
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send/?phone=5544998348366&text=Ol%C3%A1%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20AppSec&type=phone_number&app_absent=0"
+    class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+  </a>
+
+
 </body>
+
+
 </html>
