add hover to whatsapp bt

--- a/_sass/components/_social.scss
+++ b/_sass/components/_social.scss
@@ -28,6 +28,12 @@
   z-index:100;
 }
 
+a.float:hover{
+  text-decoration:none;
+  background-color:#00c853;
+  color:#FFF;
+}
+
 .my-float{
 	margin-top:16px;
 }
