change header and intro image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,12 @@
   {% include google-analytics.html %}
 
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
   <a href="https://api.whatsapp.com/send/?phone=5544998348366&text=Ol%C3%A1%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20AppSec&type=phone_number&app_absent=0"
     class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
+    <i class="whatsapp">
+      <img width="80px" height="80px" alt="whatsapp" src="/images/logo/logo_animated.svg">
+    </i>
   </a>
 
 
