--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -1,23 +1,9 @@
 .intro-image {
-  width: 100%;
-  height: auto;
+  width: 850px;
   display: block;
-  margin-top: -80px;
-
-  @include media-breakpoint-up(sm) {
-    margin-top: -150px;
-  }
-  @include media-breakpoint-up(md) {
-    margin-top: -370px;
-  }
-  @include media-breakpoint-up(lg) {
-    margin-top: -470px;
-  }
-  @include media-breakpoint-up(xl) {
-    margin-top: -570px;
-  }
-
-
+  height: auto;
+  margin: auto;
+  // background-color: $primary;
 }
 .intro-image-absolute {
   max-width: none;
