--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 100px;
+  padding-bottom: 80px;
   overflow: hidden;
-  @include media-breakpoint-up(md) {
-    padding-top: 140px;
-    padding-bottom: 140px;
-  }
+  // @include media-breakpoint-up(md) {
+  //   padding-top: 140px;
+  //   padding-bottom: 140px;
+  // }
   h1 {
     color: $black;
     font-size: 42px;
@@ -39,6 +39,10 @@
       width: 80%;
     }
   }
+}
+
+.home{
+  background-color: $primary;
 }
 
 .intro-small {
