--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -1,13 +1,16 @@
 .feature {
   height: 100%;
-  border: 1px solid $white-offset;
+  border: 1px solid rgb(229, 231, 234);
   border-radius: 3px;
-  padding: 20px;
-  background-color: $white-offset;
+  padding: 55px 35px;
+  background-color: $white;
   display: flex;
   align-items: center;
   flex-direction: column;
   text-align: center;
+  color: #808080;
+
+  // box-shadow: 0px 1px 1px #999;
   .feature-image {
     flex: 0 0 auto;
     width: 80px;
@@ -19,11 +22,49 @@
   img {
     width: 100%;
     height: auto;
+    
   }
   .feature-title {
+    a{
+      color: black;
+    }
   }
   .feature-content {
     margin-bottom: 0;
     margin-top: auto;
   }
+  a{
+    color: black;
+  }
+
+  p{
+     color: #808080;;
+  }
+
+}
+.shadow{
+  text-align: left;
+  border-radius: .625rem;
+  box-shadow: 0 0.3125rem 1.25rem rgba(0, 0, 0, .1);
+  
+  h2{
+    padding-bottom: 30px;
+  }
+
+}
+
+.feature-header{
+  text-align: center;
+  margin-bottom: 60px;
+
+  h1{
+    font-size: 40px;
+    font-weight: 700;
+  }
+}
+
+.cta-btn{
+  padding-bottom: 60px;
+  text-align: center;
+  margin-top: -40px;
 }
