--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -26,7 +26,7 @@
   }
   .feature-title {
     a{
-      color: black;
+      color: #2e354a;
     }
   }
   .feature-content {
@@ -34,7 +34,7 @@
     margin-top: auto;
   }
   a{
-    color: black;
+    color: #2e354a;
   }
 
   p{
