--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -10,7 +10,7 @@
   //   padding-bottom: 140px;
   // }
   h1 {
-    color: $black;
+    color: #2e354a;
     font-size: 42px;
     font-weight: bold;
     line-height: 1.2;
