--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,6 +52,7 @@ $sub-footer-text-color: $white;
 @import "components/intro";
 @import "components/intro-image";
 @import "components/strip";
+@import "components/post";
 @import "components/feature";
 @import "components/social";
 // @import "components/fonts"; // Uncomment this line to self host font
