--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -9,7 +9,7 @@ bodyClass: "page-team"
       <div class="team team-single">
         {% if page.image %}
         <div class="team-image">
-            <img width="360" height="360" alt="{{ page.title }}" class="img-fluid mb-2" src="{{ page.image | relative_url }}" />
+            <img width="360" alt="{{ page.title }}" class="img-fluid mb-2" src="{{ page.image | relative_url }}" />
         </div>
         {% endif %}
         <h1 class="title">{{page.title}}</h1>
@@ -17,4 +17,5 @@ bodyClass: "page-team"
       </div>
     </div>
   </div>
+  
 </div>
